--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Oracle Remote Server
+name: Deploy to Remote Server
 
 on:
   push:
@@ -29,22 +29,22 @@ jobs:
     - name: Configure SSH key
       run: |
         mkdir -p ~/.ssh
-        echo "${{ secrets.ORACLE_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        echo "${{ secrets.CODECREANDO_APPS_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
 
     # 5. Copia el WAR y Dockerfile al servidor remoto
     - name: Copy WAR and Dockerfile to Remote Server
       run: |
-        scp -o StrictHostKeyChecking=no target/*.war opc@150.136.98.109:/home/opc/proyectos/demo/demo.war
-        scp -o StrictHostKeyChecking=no Dockerfile opc@150.136.98.109:/home/opc/proyectos/demo/Dockerfile
+        scp -o StrictHostKeyChecking=no target/demo-1.0.0.war mtienda@astra.growjet.tech:/opt/apps/demo/demo-1.0.0.war
+        scp -o StrictHostKeyChecking=no Dockerfile mtienda@astra.growjet.tech:/opt/apps/demo/Dockerfile
 
     # 6. Ejecuta comandos en el servidor remoto para construir y desplegar el contenedor
     - name: Build and Deploy Docker Container on Remote Server
       run: |
-        ssh -o StrictHostKeyChecking=no opc@150.136.98.109 << 'EOF'
-          cd /home/opc/proyectos/demo
-          sudo docker build -t demo-app:latest .
-          sudo docker stop demo-app || true
-          sudo docker rm demo-app || true
-          sudo docker run -d --name demo-app -p 8081:8080 demo-app:latest
+        ssh -o StrictHostKeyChecking=no mtienda@astra.growjet.tech << 'EOF'
+          cd /opt/apps/demo
+          docker build -t demo-app:latest .
+          docker stop demo-app || true
+          docker rm demo-app || true
+          docker run -d --name demo-app -p 8081:8080 demo-app:latest
         EOF
