--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,10 @@ name: Deploy to Remote Server
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'v*'  # Esto significa que cualquier tag que empiece con "v" activará el workflow
+  release:
+    types: [published]  # Esto activará el flujo cuando se publique una release
 
 jobs:
   deploy:
