--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,13 @@
 	</parent>
 	<groupId>com.codecreando</groupId>
 	<artifactId>demo</artifactId>
-	<version>1.0.1</version>
+	<version>${project.version}</version>
 	<packaging>war</packaging>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<project.version>1.0.1</project.version>
 	</properties>
 	<dependencies>
 		<dependency>
