Se quitan los 2 puntos

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         echo "VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Debug Version
-      run: echo "Application version is: ${{ env.VERSION }}"
+      run: echo "Application version is ${{ env.VERSION }}"
 
     # 2. Configura JDK 11
     - name: Set up JDK 11
