--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,12 @@
 	</parent>
 	<groupId>com.codecreando</groupId>
 	<artifactId>demo</artifactId>
-	<version>${project.version}</version>
+	<version>1.0.4</version>
 	<packaging>war</packaging>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
-		<project.version>1.0.3</project.version>
 	</properties>
 	<dependencies>
 		<dependency>
